# boilerplate-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  update-pre-commit.yml
scripts/: change_python_version.sh  remove_dependabot.sh  rename_project.sh
