[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeongseop Lim", email = "jseoplim@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
myproject = "myproject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
lint = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# Enable to use numpy typing
# plugins = ["numpy.typing.mypy_plugin"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
