[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeongseop Lim", email = "jseoplim@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-project = "my_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-xdist>=3.8.0",
]
lint = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.407",
    "ruff>=0.11.7",
]

[tool.mypy]
python_version = "3.12"
packages = ["src", "tests"]

strict = true
ignore_missing_imports = true

[tool.pyright]
include = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
default-groups = ["dev", "lint"]
